<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="Personal"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/ic_condition"
        android:title="@string/bottom_navigation_conditions"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/ic_medication"
        android:title="@string/bottom_navigation_medications"/>
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/ic_allergy"
        android:title="@string/bottom_navigation_allergies"/>
    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/ic_phone"
        android:title="@string/bottom_navigation_contacts"/>
</menu>