<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.9"
        android:layout_marginBottom="8dp"
        style="@style/MaterialCard">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/condition_title_entity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                style="@style/cardViewTitle"/>

            <ImageView
                android:id="@+id/condition_vert_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_vert"/>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/condition_title_entity"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:alpha=".5"
                android:background="?colorOnPrimarySurface" />

            <TextView
                android:id="@+id/condition_symptoms_entity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:text="@string/associated_symptoms"
                style="@style/cardViewSubTitle"/>

            <TextView
                android:id="@+id/condition_symptoms_text_entity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/condition_symptoms_entity"
                android:text="@string/text"
                style="@style/textColorBody"/>

            <TextView
                android:id="@+id/condition_medications_entity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_below="@id/condition_symptoms_text_entity"
                android:text="@string/medicine"
                style="@style/cardViewSubTitle"/>

            <TextView
                android:id="@+id/condition_medications_text_entity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/condition_medications_entity"
                android:text="@string/text"
                style="@style/textColorBody"/>

            <TextView
                android:id="@+id/condition_doctor_entity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_below="@id/condition_medications_text_entity"
                android:text="@string/doctor_specialst"
                style="@style/cardViewSubTitle"/>

            <TextView
                android:id="@+id/condition_doctor_text_entity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/condition_doctor_entity"
                android:text="@string/text"
                style="@style/textColorBody"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>