<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.9"
        android:layout_marginBottom="8dp"
        style="@style/MaterialCard">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/medication_title_entity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="bold"
                style="@style/cardViewTitle"/>

            <ImageView
                android:id="@+id/medication_vert_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_vert"/>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/medication_title_entity"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:alpha=".5"
                android:background="?colorOnPrimarySurface" />

            <TextView
                android:id="@+id/medication_dosage_entity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:text="@string/dosage"
                style="@style/cardViewSubTitle"/>

            <TextView
                android:id="@+id/medication_dosage_text_entity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/medication_dosage_entity"
                android:text="@string/text"
                style="@style/textColorBody"/>

            <TextView
                android:id="@+id/medication_description_entity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_below="@id/medication_dosage_text_entity"
                android:text="@string/description"
                style="@style/cardViewSubTitle"/>

            <TextView
                android:id="@+id/medication_description_text_entity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/medication_description_entity"
                android:text="@string/text"
                style="@style/textColorBody"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>